Rewrite deinterlace, add 16 bits support.
Signed-off-by: jpsdr <jpsdr.psx@free.fr>

--- a/Deinterlace/JPSDR_Deinterlace.rc
+++ b/Deinterlace/JPSDR_Deinterlace.rc
@@ -68,13 +68,13 @@ BEGIN
     CONTROL         "Blend fields (Bilinear)",IDC_BLEND,"Button",BS_AUTORADIOBUTTON,15,16,83,13
     CONTROL         "Blend fields (Trilinear)",IDC_BLEND_TRI,"Button",BS_AUTORADIOBUTTON,15,28,83,13
     CONTROL         "Interpolate",IDC_INTERPOLATE,"Button",BS_AUTORADIOBUTTON,15,40,83,13
-    CONTROL         "Yadif",IDC_YADIF,"Button",BS_AUTORADIOBUTTON,15,52,83,13
+//    CONTROL         "Yadif",IDC_YADIF,"Button",BS_AUTORADIOBUTTON,15,52,83,13
     GROUPBOX        "Discard",IDC_DISCARD,10,70,90,38,WS_GROUP
     CONTROL         "Top field",IDC_TOP,"Button",BS_AUTORADIOBUTTON,15,81,43,10
     CONTROL         "Bottom field",IDC_BOTTOM,"Button",BS_AUTORADIOBUTTON,15,94,53,10
-    GROUPBOX        "Field order",IDC_FIELD_ORDER,109,70,48,38,WS_GROUP
-    CONTROL         "TFF",IDC_TFF,"Button",BS_AUTORADIOBUTTON,115,81,29,10
-    CONTROL         "BFF",IDC_BFF,"Button",BS_AUTORADIOBUTTON,115,94,29,10
+//    GROUPBOX        "Field order",IDC_FIELD_ORDER,109,70,48,38,WS_GROUP
+//    CONTROL         "TFF",IDC_TFF,"Button",BS_AUTORADIOBUTTON,115,81,29,10
+//    CONTROL         "BFF",IDC_BFF,"Button",BS_AUTORADIOBUTTON,115,94,29,10
 END
 
 
